--- a/supervisor-app.conf
+++ b/supervisor-app.conf
@@ -2,8 +2,7 @@
 nodaemon=true
 
 [program:web-ui]
-command = npm start;
-autostart=true
-autorestart=false
-startsecs = 0
-redirect_stderr=true
+directory = /app/
+command = npm start
+autostart = true
+autorestart = false
